--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,8 +1,25 @@
+@import url("https://fonts.googleapis.com/css?family=Libre+Baskerville:400i,700");
+
 html {
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+  /* We set the font-size tp 62.5% because the default font-size is 16px. 62.5% of
+  16px gives us 10px which is a nicer way to measure our font sizes. Now 1rem === 10px, instead of 1rem being 16px
+  No nasty decimal calculations for us */
+
+  font-size: 62.5%;
 }
+
+@media only screen and (max-width: 764px) {
+  html {
+    font-size: 52.5%;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  html {
+    font-size: 40%;
+  }
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -185,7 +202,6 @@ textarea {
   font: inherit;
 }
 html {
-  font: 112.5%/1.45em georgia, serif;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -615,8 +631,18 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
-@media only screen and (max-width: 480px) {
-  html {
-    font-size: 100%;
-  }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
